--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
       name="description"
       content="M.Tech in Information Technology from Devi Ahilya University | A former intern at Ernst & Young GDS|Problem Solver and |Software Engineer"
     />
+    <meta property="og:type" content="website" />
     <meta property="og:title" content="Pooja Patel" />
     <meta property="og:description" content="My Portfolio using React JS." />
     <meta
