Added og meta-tag

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     <meta property="og:description" content="My Portfolio using React JS." />
     <meta
       property="og:image"
-      content="https://akm-img-a-in.tosshub.com/indiatoday/images/story/201802/portfolio.jpeg?FiDuEq_3VnAh8wxpLykw3aWI.eIslcbH&size=770:433"
+      content="https://www.pngkey.com/png/detail/936-9366805_portfolio-calligraphy.png"
     />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
 
