Adding namespace to og

--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,9 @@
-<!DOCTYPE html>
+<!DOCTYPE html prefix="og: http://ogp.me/ns#">
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-
+    <title>Pooja Patel</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta name="description" content="My Portfolio using React JS" />
-    <meta
-      name="description"
-      content="M.Tech in Information Technology from Devi Ahilya University | A former intern at Ernst & Young GDS|Problem Solver and |Software Engineer"
-    />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Pooja Patel" />
     <meta property="og:description" content="My Portfolio using React JS." />
@@ -17,9 +11,13 @@
       property="og:image"
       content="https://www.pngkey.com/png/detail/936-9366805_portfolio-calligraphy.png"
     />
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+    <meta name="theme-color" content="#000000" />
+    <meta
+      name="description"
+      content="M.Tech in Information Technology from Devi Ahilya University | A former intern at Ernst & Young GDS|Problem Solver and |Software Engineer"
+    />
 
-    <title>Pooja Patel</title>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
