--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,11 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <link
+      itemprop="thumbnailUrl"
+      href="https://akm-img-a-in.tosshub.com/indiatoday/images/story/201802/portfolio.jpeg?FiDuEq_3VnAh8wxpLykw3aWI.eIslcbH"
+    />
+
     <div id="root"></div>
   </body>
 </html>
