Added span for image

--- a/public/index.html
+++ b/public/index.html
@@ -21,10 +21,12 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <link
-      itemprop="thumbnailUrl"
-      href="https://akm-img-a-in.tosshub.com/indiatoday/images/story/201802/portfolio.jpeg?FiDuEq_3VnAh8wxpLykw3aWI.eIslcbH"
-    />
+    <span itemprop="image" itemscope itemtype="image/jpeg">
+      <link
+        itemprop="url"
+        href="https://akm-img-a-in.tosshub.com/indiatoday/images/story/201802/portfolio.jpeg?FiDuEq_3VnAh8wxpLykw3aWI.eIslcbH"
+      />
+    </span>
 
     <div id="root"></div>
   </body>
