changed itemtype for  link tag for thumbnail url

--- a/public/index.html
+++ b/public/index.html
@@ -21,10 +21,10 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <span itemprop="image" itemscope itemtype="image/jpeg">
+    <span itemprop="image" itemscope itemtype="image/png">
       <link
         itemprop="url"
-        href="https://akm-img-a-in.tosshub.com/indiatoday/images/story/201802/portfolio.jpeg?FiDuEq_3VnAh8wxpLykw3aWI.eIslcbH"
+        href="https://www.pngkey.com/png/detail/936-9366805_portfolio-calligraphy.png"
       />
     </span>
 
