--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,10 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <link
+      itemprop="thumbnailUrl"
+      href="https://www.pngkey.com/png/detail/936-9366805_portfolio-calligraphy.png"
+    />
     <span itemprop="image" itemscope itemtype="image/png">
       <link
         itemprop="url"
