--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,10 @@
     <meta charset="utf-8" />
     <title>Pooja Patel</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Pooja Patel" />
+    <meta property="og:image:type" content="image/png" />
     <meta property="og:description" content="My Portfolio using React JS." />
     <meta
       property="og:image"
