updated og metatag

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <meta property="og:description" content="My Portfolio using React JS." />
     <meta
       property="og:image"
-      content="https://akm-img-a-in.tosshub.com/indiatoday/images/story/201802/portfolio.jpeg?FiDuEq_3VnAh8wxpLykw3aWI.eIslcbH"
+      content="https://www.pngkey.com/png/detail/936-9366805_portfolio-calligraphy.png"
     />
     <meta name="theme-color" content="#000000" />
     <meta
