--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <link href="./logo.png" rel="shortcut icon" type="image/png" />
+    <link href="./logo.png" rel="shortcut icon" type="image/x-icon" />
     <link
       itemprop="thumbnailUrl"
       href="https://www.pngkey.com/png/detail/936-9366805_portfolio-calligraphy.png"
