added og:url tag

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
       name="description"
       content="M.Tech in Information Technology from Devi Ahilya University | A former intern at Ernst & Young GDS|Problem Solver and |Software Engineer"
     />
-
+    <meta property="og:url" content="poojapatel.netlify.app" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
   </head>
   <body>
