Updated Job role

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="M.Tech in Information Technology from Devi Ahilya University | A former intern at Ernst & Young GDS|Problem Solver and |Software Engineer"
+      content="M.Tech in Information Technology from Devi Ahilya University | Site Reliability Engineer "
     />
     <meta property="og:url" content="poojapatel.netlify.app" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
